fix comment overflow

--- a/src/pages/company/UserCompanyDiscussionForum.module.scss
+++ b/src/pages/company/UserCompanyDiscussionForum.module.scss
@@ -271,3 +271,17 @@
     cursor: pointer;
   }
 }
+
+.commentContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  @media screen and (max-width: 668px) {
+    gap: 3rem;
+  }
+
+  @media screen and (max-width: 480px) {
+    gap: 2rem;
+  }
+}
